Moved weather to it's own folder

--- a/Makefile.in
+++ b/Makefile.in
@@ -98,6 +98,7 @@ DIRECTORY_ARCHIVES=$(DVDPLAYER_ARCHIVES) \
                    xbmc/video/video.a \
                    xbmc/video/windows/videowindows.a \
                    xbmc/view/view.a \
+									 xbmc/weather/weather.a \
                    xbmc/windowing/windowing.a \
                    xbmc/windows/windows.a \
                    xbmc/xbmc.a \
